замечания ревью